--- a/docs/notebooks/basics.ipynb
+++ b/docs/notebooks/basics.ipynb
@@ -2090,13 +2090,10 @@
      "output_type": "stream",
      "text": [
       "<tool id=\"seqtk_seq\" name=\"Convert to FASTA (seqtk)\" version=\"0.1.0\">\r\n",
-      "    <stdio>\r\n",
-      "        <exit_code range=\"1:\" />\r\n",
-      "    </stdio>\r\n",
       "    <requirements>\r\n",
       "        <requirement type=\"package\" version=\"1.0-r68\">seqtk</requirement>\r\n",
       "    </requirements>\r\n",
-      "    <command><![CDATA[\r\n",
+      "    <command detect_errors=\"exit_code\"><![CDATA[\r\n",
       "        seqtk seq\r\n",
       "              $shift_quality\r\n",
       "              -q $quality_min\r\n",
