docs: Make 'seqtk seq -A' invocation consistent
Currently some documentation files use 'seqtk seq -A', while other
files use 'seqtk seq -a'.  This patch is to unify the invocation to
'-A', according to the help output of 'seqtk'.

--- a/docs/notebooks/basics.ipynb
+++ b/docs/notebooks/basics.ipynb
@@ -77,7 +77,7 @@
    },
    "outputs": [],
    "source": [
-    "!seqtk seq -a 2.fastq > 2.fasta"
+    "!seqtk seq -A 2.fastq > 2.fasta"
    ]
   },
   {
@@ -154,7 +154,7 @@
     "                    --id 'seqtk_seq' \\\n",
     "                    --name 'Convert to FASTA (seqtk)' \\\n",
     "                    --requirement seqtk@1.0-r68 \\\n",
-    "                    --example_command 'seqtk seq -a 2.fastq > 2.fasta' \\\n",
+    "                    --example_command 'seqtk seq -A 2.fastq > 2.fasta' \\\n",
     "                    --example_input 2.fastq \\\n",
     "                    --example_output 2.fasta"
    ]
@@ -211,7 +211,7 @@
     "                    --id 'seqtk_seq' \\\n",
     "                    --name 'Convert to FASTA (seqtk)' \\\n",
     "                    --requirement seqtk@1.0-r68 \\\n",
-    "                    --example_command 'seqtk seq -a 2.fastq > 2.fasta' \\\n",
+    "                    --example_command 'seqtk seq -A 2.fastq > 2.fasta' \\\n",
     "                    --example_input 2.fastq \\\n",
     "                    --example_output 2.fasta \\\n",
     "                    --test_case \\\n",
@@ -1155,7 +1155,7 @@
       "requests.packages.urllib3.connectionpool DEBUG 2015-11-02 08:35:45,011 \"GET /api/jobs/5729865256bc2525?key=ddb295b1fb2d49e452fd16d973b45b0e HTTP/1.1\" 200 None\n",
       "galaxy.tools.deps DEBUG 2015-11-02 08:35:45,122 Building dependency shell command for dependency 'seqtk'\n",
       "galaxy.tools.deps WARNING 2015-11-02 08:35:45,122 Failed to resolve dependency on 'seqtk', ignoring\n",
-      "galaxy.jobs.runners DEBUG 2015-11-02 08:35:45,377 (2) command is: seqtk seq -a \"/tmp/tmpzVXVC9/files/000/dataset_1.dat\" > \"/tmp/tmpzVXVC9/files/000/dataset_2.dat\"; return_code=$?; python /tmp/tmpzVXVC9/job_working_directory/000/2/set_metadata_W8WXCI.py /tmp/tmpzVXVC9/tmp/tmpb65YBw /tmp/tmpzVXVC9/job_working_directory/000/2/galaxy.json /tmp/tmpzVXVC9/job_working_directory/000/2/metadata_in_HistoryDatasetAssociation_2_FtmHgl,/tmp/tmpzVXVC9/job_working_directory/000/2/metadata_kwds_HistoryDatasetAssociation_2_44Cu9Z,/tmp/tmpzVXVC9/job_working_directory/000/2/metadata_out_HistoryDatasetAssociation_2_iCrgwg,/tmp/tmpzVXVC9/job_working_directory/000/2/metadata_results_HistoryDatasetAssociation_2_3nQD01,/tmp/tmpzVXVC9/files/000/dataset_2.dat,/tmp/tmpzVXVC9/job_working_directory/000/2/metadata_override_HistoryDatasetAssociation_2_reME9_; sh -c \"exit $return_code\"\n",
+      "galaxy.jobs.runners DEBUG 2015-11-02 08:35:45,377 (2) command is: seqtk seq -A \"/tmp/tmpzVXVC9/files/000/dataset_1.dat\" > \"/tmp/tmpzVXVC9/files/000/dataset_2.dat\"; return_code=$?; python /tmp/tmpzVXVC9/job_working_directory/000/2/set_metadata_W8WXCI.py /tmp/tmpzVXVC9/tmp/tmpb65YBw /tmp/tmpzVXVC9/job_working_directory/000/2/galaxy.json /tmp/tmpzVXVC9/job_working_directory/000/2/metadata_in_HistoryDatasetAssociation_2_FtmHgl,/tmp/tmpzVXVC9/job_working_directory/000/2/metadata_kwds_HistoryDatasetAssociation_2_44Cu9Z,/tmp/tmpzVXVC9/job_working_directory/000/2/metadata_out_HistoryDatasetAssociation_2_iCrgwg,/tmp/tmpzVXVC9/job_working_directory/000/2/metadata_results_HistoryDatasetAssociation_2_3nQD01,/tmp/tmpzVXVC9/files/000/dataset_2.dat,/tmp/tmpzVXVC9/job_working_directory/000/2/metadata_override_HistoryDatasetAssociation_2_reME9_; sh -c \"exit $return_code\"\n",
       "galaxy.jobs.runners.local DEBUG 2015-11-02 08:35:45,377 (2) executing job script: /tmp/tmpzVXVC9/job_working_directory/000/2/galaxy_2.sh\n",
       "requests.packages.urllib3.connectionpool INFO 2015-11-02 08:35:45,435 Starting new HTTP connection (1): localhost\n",
       "galaxy.jobs DEBUG 2015-11-02 08:35:45,464 (2) Persisting job destination (destination id: local:///)\n",
